src/main/java/com/example/hanghaeplus/common/error/exception/EntityNotFoundException.java
package com.example.hanghaeplus.common.error.exception;

import com.example.hanghaeplus.common.error.ErrorCode;

public class EntityNotFoundException extends BusinessException {


    public EntityNotFoundException(ErrorCode errorCode) {
        super(errorCode);
    }
}
